--- a/local.conf.vm
+++ b/local.conf.vm
@@ -18,6 +18,7 @@ IMAGE_URLS=http://launchpad.net/cirros/trunk/0.3.0/+download/cirros-0.3.0-x86_64
 
 enable_service solum
 enable_service solum-api
+enable_service solum-builder-api
 enable_service solum-conductor
 enable_service solum-deployer
 enable_service solum-worker
